Latin line numbers now align correctly with main text in MainTextPanel

--- a/src/public/css/edition-composer.css
+++ b/src/public/css/edition-composer.css
@@ -170,10 +170,8 @@ div.main-text.mode-text_beta {
 }
 
 div.line-number {
-    font-size: 1em;
     margin:0;
     padding: 0;
-    line-height: 1em;
 }
 
 
@@ -200,7 +198,7 @@ div.apparatus {
 }
 
 .main-text.text-la {
-    font-size: 1.2em;
+    font-size: 18px;
 }
 
 
